--- a/style.css
+++ b/style.css
@@ -11,3 +11,6 @@ footer a {
     margin: 0 10px;
     font-size: 24px;
 }
+img {
+    width: 300px; /* Điều chỉnh chiều rộng */
+    height: 200px; /* Điều chỉnh chiều cao */
